--- a/public/seed/table/table.html
+++ b/public/seed/table/table.html
@@ -10,7 +10,33 @@
             <div  ng-include src="left.url"></div>
         </div>
 		<div class="col-xs-12 col-sm-10">
-
+            Table
+           <table datatable="" class="row-border hover">
+    <thead>
+    <tr>
+        <th>ID</th>
+        <th>First name</th>
+        <th>Last name</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td>1</td>
+        <td>Foo</td>
+        <td>Bar</td>
+    </tr>
+    <tr>
+        <td>123</td>
+        <td>Someone</td>
+        <td>Youknow</td>
+    </tr>
+    <tr>
+        <td>987</td>
+        <td>Iamout</td>
+        <td>Ofinspiration</td>
+    </tr>
+    </tbody>
+</table>
 		</div>
     </div>
 </div>
