--- a/public/seed/dashboard/dashboard.html
+++ b/public/seed/dashboard/dashboard.html
@@ -10,7 +10,9 @@
             <div  ng-include src="left.url"></div>
         </div>
 		<div class="col-xs-12 col-sm-10">
-            Dashboard
+           nvd3
+            <nvd3 options="options" data="data"></nvd3>
+           
 		</div>
     </div>
 </div>
