--- a/public/seed/dashboard/dashboard.html
+++ b/public/seed/dashboard/dashboard.html
@@ -9,7 +9,7 @@
 		<div id="sidebar-left" class="col-xs-2 col-sm-2">
             <div  ng-include src="left.url"></div>
         </div>
-		<div class="col-xs-12 col-sm-10">
+		<div class="col-xs-12 col-sm-10" style="background-color:#000;">
            nvd3
             <nvd3 options="options" data="data"></nvd3>
            
