--- a/public/seed/table/table.html
+++ b/public/seed/table/table.html
@@ -40,18 +40,78 @@
 
 <form class="form-horizontal" role="form" name="form">
  <div class="form-group">
-<button class="btn">故障</button>
+ <label class="col-md-3 control-label" for="id_start">当前状态:</label>
+ <button type="button" class="btn btn-success btn-lg">
+<span class="fa fa-cog"></span> 运行
+</button>
 </div>
  <div class="form-group">
+ <label class="col-md-3 control-label" for="id_start">转换状态:</label>
+
+<button type="button" class="btn btn-default btn-lg">
+  <span class="fa fa-ban"></span> 故障
+</button>
+<button type="button" class="btn btn-default btn-lg">
+  <span class="fa fa-wrench"></span> 维护
+</button>
+<button type="button" class="btn btn-default btn-lg">
+  <span class="fa fa-power-off"></span> 停用
+</button>
+</div>
+<div class="form-group">
  <label class="col-md-3 control-label" for="id_start">开始时间:</label>
-<input id="start
-"/>
+<div class="col-sm-2">
+<input type="time"  class="form-control" />
+</div>
 </div>
  <div class="form-group">
 <label class="col-md-3 control-label" for="id_stop">结束时间:</label>
-<input id="id_stop"/>
+<div class="col-sm-2">
+<input type="time"  class="form-control" readonly="readonly" />
+</div>
 </div>
 </form>
+
+<br/><br/><br/>
+
+<form class="form-horizontal" role="form" name="form">
+ <div class="form-group">
+ <label class="col-md-3 control-label" for="id_start">当前状态:</label>
+ <button type="button" class="btn btn-success btn-lg">
+  <span class="fa fa-cog"></span> 运行
+</button>
+</div>
+ <div class="form-group">
+ <label class="col-md-3 control-label" for="id_start">转换状态:</label>
+
+
+<button type="button" class="btn btn-default btn-lg">
+  <span class="fa fa-car"></span> 占位
+</button>
+</div>
+ <div class="form-group">
+ <label class="col-md-3 control-label" for="id_start">试验属性:</label>
+<select>
+<option>选择试验属性</option>
+<option>车辆准备</option>
+<option>车辆故障</option>
+<option>车辆维修</option>
+</select>
+</div>
+ <div class="form-group">
+ <label class="col-md-3 control-label" for="id_start">开始时间:</label>
+<div class="col-sm-2">
+<input type="time"  class="form-control" />
+</div>
+</div>
+ <div class="form-group">
+<label class="col-md-3 control-label" for="id_stop">结束时间:</label>
+<div class="col-sm-2">
+<input type="time"  class="form-control" readonly="readonly" />
+</div>
+</div>
+</form>
+
 
 		</div><!-- col -- >
     </div><!-- row  -- >
