--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -57,6 +57,10 @@
     
     <script src="/bower_components/flot/jquery.flot.js"></script>    
     <script src="/bower_components/flot/jquery.flot.resize.js"></script>
+    <script src="/bower_components/flot/jquery.flot.stack.js"></script>
+    <script src="/bower_components/flot/jquery.flot.selection.js"></script>
+    <script src="/bower_components/flot/jquery.flot.navigate.js"></script>
+    <script src="/bower_components/flot/jquery.flot.time.js"></script>
     <script src="/bower_components/angular-flot/angular-flot.js"></script>
     
     <link rel="stylesheet" href="/bower_components/nvd3/nv.d3.css">   
