--- a/public/ekanban/index.html
+++ b/public/ekanban/index.html
@@ -29,7 +29,9 @@
   
   <link href="css/style.css" rel="stylesheet">
    <link href="css/kanban.css" rel="stylesheet">
-  
+    <link href="css/main.css" rel="stylesheet">
+    <link href="css/kanban-dark.css" rel="stylesheet">
+    
   <script src="/bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
