--- a/public/ekanban/kanban/module.html
+++ b/public/ekanban/kanban/module.html
@@ -11,7 +11,7 @@
                       <a title="Add card to column" class="pull-right" ng-click="addNewCard(column)"><i class="glyphicon glyphicon-plus"></i></a>
                       <span>{{column.name}} ({{column.cards.length}})</span>
                   </div>
-                  <ul class="cards apps-container screen floatleft" ui-sortable="sortableOptions" sortable ng-model="column.cards" style="min-height:{{columnHeight}}px;max-height:{{columnHeight}}px;">
+                  <ul class="cards" ui-sortable="sortableOptions" sortable ng-model="column.cards" style="min-height:{{columnHeight}}px;max-height:{{columnHeight}}px;">
                       <li class="card" ng-repeat="card in column.cards" style="background-color: #{{card.color}};">
                           <a class="pull-right" ng-click="delete(card, column)"><i class="glyphicon glyphicon-remove"></i></a>
                           <a class="pull-right" title="Archive" ng-click="archive(kanban, column, card)" ng-show="isLastColumn(column.name, kanban)"><i class="glyphicon glyphicon-folder-close"></i></a>
@@ -26,16 +26,4 @@
         </div>    
 </div>
 {connectWith: '#kanban ul.cards'}
-<div id="main" class="container-fluid"> 
-        <div id="columns" class="row">
- <div class="floatleft">
-    <div ui-sortable="sortableOptions" class="apps-container screen floatleft" ng-model="list1">
-      <div class="app" ng-repeat="app in list1">{{$index}} {{app.title}}</div>
-    </div>
-    <div ui-sortable="sortableOptions" class="apps-container screen floatleft" ng-model="list2">
-      <div class="app" ng-repeat="app in list2">{{$index}} {{app.title}}</div>
-    </div>
-    <div style="clear: both;"></div>
-</div>
-        </div>    
-</div>
+ 
